caroussel overflow fixed

--- a/css/style.css
+++ b/css/style.css
@@ -817,6 +817,7 @@ button a {
     width: 100%;
     padding: 20px 0;
     position: relative;
+    overflow: hidden;
 }
 
 .swiper-wrapper {
